<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray2"
    tools:context=".label_ui.LabelTemplateActivity">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_shape"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:text="@string/Label_test1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/Label_test2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/Label_test3"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="33dp"
        android:text="@string/Label_test4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_density"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edit_con"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:hint="@string/edit_hint"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/default_density"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_distance"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_distance"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/edit_hint_distance"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_distance"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_return_paper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_distance"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edit_return"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/edit_hint_distance"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_distance"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_template_print"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@color/blue_light"
        android:text="@string/btn_print"
        android:textColor="@color/white" />
</LinearLayout>