<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical"
    tools:context=".label_ui.LabelTextActivity">


    <RadioGroup
        android:id="@+id/rg_align"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_align_left"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/align_left"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/align_left" />


        <RadioButton
            android:id="@+id/rb_align_center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/align_center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/align_create" />


        <RadioButton
            android:id="@+id/rb_align_right"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/align_right"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/align_right" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/rg_font"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_small"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/small_character_size"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/small_font" />


        <RadioButton
            android:id="@+id/rb_double_width"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/double_width"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/medium_font" />


        <RadioButton
            android:id="@+id/rb_double_height"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/double_height"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/large_font" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_bold"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/bold"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/txt_bold" />

        <CheckBox
            android:id="@+id/cb_under_line"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_text_circle_shape"
            android:button="@null"
            android:drawableTop="@mipmap/under_line"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/underscore" />

    </LinearLayout>


    <com.lckj.printsdk.navigatorBar.LineEditext
        android:id="@+id/edit_text_in"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_view_shape"
        android:gravity="top"
        android:hint="@string/in_txt"
        android:textSize="20sp" />
    <!--    style="?android:attr/textViewStyle"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_density"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edit_con"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:hint="@string/edit_hint"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/default_density"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_distance"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edit_distance"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/edit_hint_distance"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_distance"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_return_paper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_distance"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edit_return"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/edit_hint_distance"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_distance"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_print_text"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@color/blue_light"
        android:text="@string/btn_print"
        android:textColor="@color/white" />


</LinearLayout>