<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2">



    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/btn_print_check"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_check"
        android:layout_below="@+id/img_logo"
        android:textColor="@color/white"
        android:background="@color/blue_light"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_set_def"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_set_def"
        android:layout_below="@+id/btn_print_check"
        android:textColor="@color/white"
        android:background="@color/blue_light"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_set_def"
       android:layout_centerHorizontal="true"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_density"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/edit_con"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:hint="@string/edit_hint"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/default_density"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/btn_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/blue_light"
            android:text="@string/save_density">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:layout_above="@+id/ll"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/about_f_version" />

        <TextView
            android:id="@+id/txt_fr_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/about_scan_version" />

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:text="Print_1.1.1_20210303_beta" />
    </LinearLayout>

</RelativeLayout>
